Make individual Top 100 Player card's clickable & route the user to that player's detail screen.

--- a/src/screens/Player/PlayersScreen.module.css
+++ b/src/screens/Player/PlayersScreen.module.css
@@ -26,6 +26,7 @@
   background-color: #1c2541;
   border-radius: 5px;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+  cursor: pointer;
 }
 
 .Form {
