Fill some StatBars to proper widths.

--- a/src/components/MatchDetail.module.css
+++ b/src/components/MatchDetail.module.css
@@ -15,6 +15,10 @@
   flex-direction: column;
 }
 
+.HeroName {
+  color: #a9cf54;
+}
+
 .ResultContainer {
   display: flex;
   flex-direction: column;
