--- a/src/components/HeroDetail.module.css
+++ b/src/components/HeroDetail.module.css
@@ -15,6 +15,10 @@
   flex-direction: column;
 }
 
+.HeroName {
+  color: #a9cf54;
+}
+
 .MatchesContainer {
   display: flex;
   flex-direction: column;
