--- a/src/screens/Player/PlayersScreen.module.css
+++ b/src/screens/Player/PlayersScreen.module.css
@@ -6,7 +6,7 @@
 }
 
 .Title {
-  color: black;
+  color: white;
   font-size: 3rem;
   text-align: center;
 }
@@ -23,7 +23,7 @@
 .PlayerItem {
   width: 20vw;
   padding: 1rem;
-  background-color: #1c2541;
+  background-color: #2e3740; /* #1c2541; */
   border-radius: 5px;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
   cursor: pointer;
@@ -40,7 +40,7 @@
   align-items: center;
   flex-direction: column;
   width: 20vw;
-  background-color: #1c2541;
+  background-color: #353f49; /* #1c2541; */
   text-align: center;
   border-radius: 10px;
 }
