--- a/src/components/PlayerOverview.module.scss
+++ b/src/components/PlayerOverview.module.scss
@@ -3,9 +3,12 @@
   justify-content: center;
   align-items: center;
   padding: 2rem 0;
-  margin: 0 2rem;
+  /* margin: 0 2rem; */
   background-color: #2e3740;
   gap: 2rem;
+
+  /* New for Grid refactoring */
+  grid-area: overview;
 }
 
 .OverviewProfile {
