--- a/src/screens/Home/HomeScreen.module.scss
+++ b/src/screens/Home/HomeScreen.module.scss
@@ -2,17 +2,47 @@
   display: flex;
   flex-direction: column;
   padding: 1rem 2rem;
-}
+  
+  
+  .Title {
+    color: black;
+    font-size: 4rem;
+    text-align: center;
+  }
+  
+  
+  .ButtonContainer {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 100vh;
+    column-gap: 10px;
+    row-gap: 10px;
+    
+    
+    a.HomeButton {
+      padding: 20vh 20vw;
+      margin: 10px 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 3rem;
+      border-radius: 10px;
+      box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+      text-align: center;
+      text-decoration: none;
+      transition: 0.2s ease-in;
+    }
+    
+    a.HomeButton:hover {
+      transform: scale(1.02);
+    }
+    
+    a.HomeButton:active {
+      transform: scale(0.95);
+      box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.7);
+    }
+  
+  }
 
-.Title {
-  color: black;
-  font-size: 4rem;
-  text-align: center;
-}
-
-.ButtonContainer {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  gap: 1rem;
 }
