--- a/src/components/HomeButton/HomeButton.module.scss
+++ b/src/components/HomeButton/HomeButton.module.scss
@@ -23,3 +23,11 @@
   transform: scale(0.95);
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.7);
 }
+
+.primary {
+  background-color: #1c2541;
+}
+
+.secondary {
+  background-color: #f44336;
+}
