--- a/src/screens/Player/PlayerDetailsScreen.module.scss
+++ b/src/screens/Player/PlayerDetailsScreen.module.scss
@@ -22,6 +22,13 @@
   }
 }
 
+.Loading {
+  font-size: 2rem;
+  font-weight: 800;
+  color: white;
+  text-align: center;
+}
+
 .Header {
   font-size: 2rem;
   text-align: center;
